syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcNotification";

package smsgrpc;


service SMSGrpcs {
  // Sends a greeting
    rpc SendSMSGrpc (SMSRequest) returns (SMSresponse);

    //rpc GetQeueUserSMS(Empty) returns(ListResultGetQeueUserSMS1);
    //rpc GetUserSMS(Empty) returns(ListResultGetUserSMS1);
    // rpc GetUserSMSbyId(IdUSer) returns(ListResultGetUserSMS1);
    //rpc Post(Product) returns(Product);
    //rpc Put(Product) returns(Product);
    //rpc Delete(ProductRowIdFilter) returns(Empty);

}
 
//message Empty {}

// The request message containing the user's name.
message SMSRequest {
  string to = 1;
  string txt = 2;
}
message SMSresponse {
  bool res  = 1;
}
message IdUSer{
    int32 IdUser=1;
}

message ResultGetQeueUserSMS1 {

    int32 Id = 1; 
    int32 IdUser = 2;
    string Resiver = 3;
    string Body = 4;
    google.protobuf.Timestamp DateSendStart = 5;
    string Periority = 6;
    string Type = 7;

}
message ListResultGetQeueUserSMS1 {
    repeated ResultGetQeueUserSMS1 items =1;
}
message ResultGetUserSMS1 {
    int32 Id = 1; 
    int32 IdUser = 2;
    string Resiver = 3;
    string Body = 4;
    google.protobuf.Timestamp DateSend = 5;
    google.protobuf.Timestamp DateDelivere = 6;
    string Status = 7;
}

message ListResultGetUserSMS1 {
    repeated ResultGetUserSMS1 items =1;
}
